# RectBinPack

./: .codecov.yml  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
example/: Main.cpp
include/RectBinPack/: Guillotine.hpp  MaxRects.hpp  RectBinPack.hpp
src/: Example.cpp  Guillotine.cpp  Guillotine.hpp  MaxRects.cpp  MaxRects.hpp  RectBinPack.hpp  Skyline.cpp  Skyline.hpp
test/: RectBinPack.cpp
